demo width 100% to prevent wrapping

--- a/app/styleguide/textfield/demo.scss
+++ b/app/styleguide/textfield/demo.scss
@@ -9,6 +9,9 @@ form div.input-container {
   &.right {
     text-align: right;
   }
+  &.large {
+    width: 100%;
+  }
 }
 
 textarea {
